# math-analyzer

./: .gitignore  CMakeLists.txt  README.md  math-analyzer.conf
include/: analysis.h  config.h
include/shunting_yard/: algo.h  tokenizer.h  tokens.h  validation.h
include/ui/: actions.h  menu.h
src/: CMakeLists.txt  analysis.cpp  config.cpp  main.cpp
src/shunting_yard/: CMakeLists.txt  algo.cpp  tokenizer.cpp  tokens.cpp  validation.cpp
src/ui/: CMakeLists.txt  actions.cpp  menu.cpp
